feat(management): display organization name instead of OIN for the orders page
Issue: nlx#1555
