# management-api/api/management.swagger.json
@@ -1865,7 +1865,7 @@
             "type" : "string"
           },
           "delegator" : {
-            "type" : "string"
+            "$ref" : "#/components/schemas/managementOrganization"
           },
           "validFrom" : {
             "format" : "date-time",
@@ -2140,7 +2140,7 @@
             "type" : "string"
           },
           "delegatee" : {
-            "type" : "string"
+            "$ref" : "#/components/schemas/managementOrganization"
           },
           "validFrom" : {
             "format" : "date-time",
